@@ -780,6 +780,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8887. Expose storage type and storage ID in BlockLocation. (wang)
 
+    HDFS-8622. Implement GETCONTENTSUMMARY operation for WebImageViewer.
+    (Jagadesh Kiran N via aajisaka)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
